[tool.poetry]
name = "adventuretime-progresser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pydantic = "^2.9.2"
bs4 = "^0.0.2"
requests-html = "^0.10.0"
lxml-html-clean = "^0.3.1"
requests = "^2.32.3"
playwright = "^1.47.0"
sqlalchemy = "^2.0.36"
click = "^8.1.7"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
